# libtcspc

./: .clang-format  .clang-format-ignore  .clang-tidy  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  meson.build  meson_options.txt  noxfile.py  pyproject.toml
benchmarks/: benchmark_read_binary_stream.cpp  meson.build  read_binary_stream_devzero.cpp  vector_queue.cpp  write_binary_stream_devnull.cpp
doc/: Doxyfile.in  meson.build
docs/: .clang-format  Doxyfile.in  genlayout.py  index.html  meson.build
docs/doxygen-awesome-css/: .editorconfig  custom.css  doxygen-awesome-sidebar-only.css.license  doxygen-awesome.css.license
docs/python/: conf.py  index.md  meson.build
docs/python/_static/: custom.css
docs/python/api/: auxiliary_objects.md  index.md  (+11 more)
examples/: BHSPCFile.hpp  flim_bruker_bh_spc.cpp  flim_bruker_swabian.cpp  flim_lineclock_bh_spc.cpp  meson.build  resonant_flim_swabian.cpp  summarize_bh_spc.cpp  summarize_swabian.cpp  swabian2vcd.cpp
examples/DumpSPC/: DumpSPC.cpp  meson.build
examples/SPCToHistogram/: SPCToHistogram.cpp  meson.build
include/: meson.build
include/FLIMEvents/: ApplyClassTemplateToTupleElements.hpp  BHDeviceEvent.hpp  BHDeviceEvents.hpp  Binning.hpp  Broadcast.hpp  BroadcastProcessor.hpp  Buffer.hpp  Common.hpp  Count.hpp  DecodedEvent.hpp  DelayHastenEvents.hpp  DelayHastenProcessor.hpp  DeviceEvent.hpp  Discard.hpp  DynamicPolymorphism.hpp  EventBuffer.hpp  EventSet.hpp  FLIMEvents.hpp  Gate.hpp  GenerateTimings.hpp  Histogram.hpp  HistogramEvents.hpp  LegacyHistogram.hpp  LineClockPixellator.hpp  Merge.hpp  NoopProcessor.hpp  PQT3DeviceEvent.hpp  PQT3DeviceEvents.hpp  PixelPhotonEvent.hpp  PixelPhotonEvents.hpp  PixelPhotonRouter.hpp  ReadBytes.hpp  RouteByChannel.hpp  RoutePhotons.hpp  SplitEvents.hpp  StreamBuffer.hpp  SwabianTagEvent.hpp  TCSPCEvents.hpp  TimeDelay.hpp  TimeTaggedEvents.hpp  (+2 more)
include/flimevt/: autocopy_span.hpp  bh_spc.hpp  binning.hpp  broadcast.hpp  buffer.hpp  common.hpp  count.hpp  delay_hasten.hpp  discard.hpp  dynamic_polymorphism.hpp  event_set.hpp  gate.hpp  generate_timings.hpp  histogram.hpp  histogram_array.hpp  histogram_elementwise.hpp  histogram_events.hpp  histogramming.hpp  legacy_histogram.hpp  line_clock_pixellator.hpp  merge.hpp  meson.build  picoquant_t3.hpp  pixel_photon_events.hpp  read_bytes.hpp  ref_processor.hpp  route_by_channel.hpp  span.hpp  split.hpp  swabian_tag.hpp  test_utils.hpp  time_delay.hpp  time_tagged_events.hpp  translate_marker.hpp  type_erased_processor.hpp  vector_queue.hpp
include/libtcspc/: acquire.hpp  apply_class_template.hpp  arg_wrappers.hpp  autocopy_span.hpp  batch.hpp  batch_unbatch.hpp  batch_unbatch_bin_increment_clusters.hpp  batch_unbatch_from_bytes.hpp  bh_spc.hpp  bin_increment_cluster_encoding.hpp  binning.hpp  broadcast.hpp  bucket.hpp  buffer.hpp  check.hpp  check_monotonicity.hpp  common.hpp  context.hpp  copy_to_buckets.hpp  core.hpp  count.hpp  data_types.hpp  delay.hpp  delay_hasten.hpp  discard.hpp  dither.hpp  errors.hpp  event.hpp  event_set.hpp  event_traits.hpp  fit_sequence.hpp  gate.hpp  generate.hpp  generate_timings.hpp  histogram.hpp  histogram_elementwise.hpp  histogram_events.hpp  histogram_impl.hpp  histogram_policies.hpp  histogram_policy.hpp  (+56 more)
include/tcb/: .clang-format  .clang-tidy  span.hpp.license
python/libtcspc/: __init__.py  _access.py  _acquisition_readers.py  _bin_mappers.py  _bucket_sources.py  _codegen.py  _compile.py  _context.py  _cpp_utils.py  _data_mappers.py  _data_traits.py  _data_types.py  _events.py  _execute.py  _graph.py  _graphviz.py  _include.py  _matchers.py  _misc.py  _node.py  _numeric_traits.py  _param.py  _processors.py  _routers.py  _streams.py  _timing_generators.py  _version.py.in  meson.build
test/: ApplyClassTemplateToTupleElementsTest.cpp  ApplyClassTemplateToTupleElementsTests.cpp  BHDeviceEventsTests.cpp  BinningTests.cpp  BroadcastProcessorTests.cpp  BroadcastTests.cpp  BufferTests.cpp  CommonTests.cpp  CountTests.cpp  DelayHastenProcessorTests.cpp  DiscardTests.cpp  DynamicPolymorphismTests.cpp  EventBufferTests.cpp  EventSetTests.cpp  GateTests.cpp  GenerateTimingsTests.cpp  HistogramEventsTests.cpp  HistogramTests.cpp  LegacyHistogramTests.cpp  LineClockPixellatorTests.cpp  MergeTests.cpp  NoopProcessorTests.cpp  PQT3DeviceEventsTests.cpp  PixelPhotonEventsTests.cpp  PixelPhotonRouterTests.cpp  ProcessorTestFixture.hpp  ReadBytesTests.cpp  RouteByChannelTests.cpp  RoutePhotonsTests.cpp  SplitEventsTests.cpp  SwabianTagEventTests.cpp  TestEvents.hpp  TimeDelayTests.cpp  TimeTaggedEventsTests.cpp  TranslateMarkerTests.cpp  apply_class_template.cpp  autocopy_span.cpp  bh_spc.cpp  binning.cpp  broadcast.cpp  (+59 more)
test/FLIMEventsTests/: BHDeviceEventTests.cpp  BHDeviceEventsTests.cpp  BroadcastProcessorTests.cpp  CommonTests.cpp  DecodedEventTests.cpp  DelayHastenEventsTests.cpp  DelayHastenProcessorTests.cpp  DeviceEventTests.cpp  DynamicPolymorphismTests.cpp  EventBufferTests.cpp  EventSetTests.cpp  FLIMEventsTests.cpp  HistogramTests.cpp  LineClockPixellatorTests.cpp  MergeTests.cpp  NoopProcessorTests.cpp  PQT3DeviceEventTests.cpp  PQT3DeviceEventsTests.cpp  PixelPhotonEventTests.cpp  PixelPhotonEventsTests.cpp  PixelPhotonRouterTests.cpp  ProcessorTestFixture.hpp  SplitEventsTests.cpp  TCSPCEventsTests.cpp  TestEvents.hpp  TimeDelayTests.cpp  meson.build
tests/: acquire.cpp  apply_class_template.cpp  arg_wrappers.cpp  autocopy_span.cpp  batch.cpp  batch_unbatch.cpp  batch_unbatch_bin_increment_clusters.cpp  batch_unbatch_from_bytes.cpp  bh_spc.cpp  bin_increment_cluster_encoding.cpp  binning.cpp  bucket.cpp  buffer.cpp  check.cpp  common.cpp  context.cpp  copy_to_buckets.cpp  core.cpp  count.cpp  data_types.cpp  delay.cpp  dither.cpp  errors.cpp  event.cpp  event_set.cpp  event_traits.cpp  fit_sequence.cpp  gate.cpp  generate.cpp  histogram.cpp  histogram_elementwise.cpp  histogram_events.cpp  histogram_impl.cpp  histogram_policies.cpp  histogram_policy.cpp  histogram_scans.cpp  histogramming.cpp  int_arith.cpp  int_types.cpp  introspect.cpp  (+41 more)
(+183 files in other folders)
