# This file is part of libtcspc
# Copyright 2019-2023 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

option('docs', type: 'feature', value: 'auto',
    description: 'Build documentation (requires Doxygen)',
)
option('tests', type: 'feature', value: 'enabled',
    description: 'Build unit tests',
)
option('benchmarks', type: 'feature', value: 'auto',
    description: 'Build benchmarks',
)
option('examples', type: 'feature', value: 'enabled',
    description: 'Build example programs',
)
