# This file is part of libtcspc
# Copyright 2019-2024 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

option('docs', type: 'feature', value: 'auto',
    description: 'Build documentation (requires Doxygen)',
)
option('tests', type: 'feature', value: 'enabled',
    description: 'Build unit tests',
)
option('tests_python', type: 'feature', value: 'enabled',
    description: 'Build C++ unit tests for the Python bindings',
)
option('benchmarks', type: 'feature', value: 'auto',
    description: 'Build benchmarks',
)
option('abridge_benchmarks', type: 'boolean', value: false,
    description: 'Run only a single range of each benchmark (e.g., for CI)',
)
option('examples', type: 'feature', value: 'enabled',
    description: 'Build example programs',
)
