# This file is part of libtcspc
# Copyright 2019-2024 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

[project]
name = "libtcspc"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "cppyy",
    "typeguard",
    "typing-extensions",
]
readme = "README.md"
license = {file = "LICENSE.txt"}

[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project.optional-dependencies]
testing = [
    "numpy",
    "pytest >= 8.0",
    "pytest-mock >= 3.0",
    "pytest-mypy >= 0.4",
]

[tool.meson-python.args]
setup = [
    '-Ddocs=disabled',
    '-Dtests=disabled',
    '-Dbenchmarks=disabled',
    '-Dexamples=disabled',
]
install = ["--tags=python-runtime"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = [
    "E501", # Line too long
]

[tool.mypy]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/python"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "libtcspc._version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cppyy"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["python/tests"]
filterwarnings = [
    # This warning comes from cppyy (as of 3.1.2).
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
addopts = ["--mypy"]
