# This file is part of libtcspc
# Copyright 2019-2023 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

summarize_swabian = executable(
    'summarize_swabian',
    'summarize_swabian.cpp',
    include_directories: public_inc,
    dependencies: [
        tcb_span_dep,
        thread_dep,
    ],
)
