# This file is part of libtcspc
# Copyright 2019-2024 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

public_cpp_headers = files(
    'libtcspc/arg_wrappers.hpp',
    'libtcspc/batch.hpp',
    'libtcspc/batch_unbatch_from_bytes.hpp',
    'libtcspc/bh_spc.hpp',
    'libtcspc/binning.hpp',
    'libtcspc/bucket.hpp',
    'libtcspc/buffer.hpp',
    'libtcspc/check.hpp',
    'libtcspc/common.hpp',
    'libtcspc/count.hpp',
    'libtcspc/delay.hpp',
    'libtcspc/dither.hpp',
    'libtcspc/errors.hpp',
    'libtcspc/fit_sequence.hpp',
    'libtcspc/gate.hpp',
    'libtcspc/generate.hpp',
    'libtcspc/histogram.hpp',
    'libtcspc/histogram_elementwise.hpp',
    'libtcspc/histogram_events.hpp',
    'libtcspc/int_types.hpp',
    'libtcspc/introspect.hpp',
    'libtcspc/match.hpp',
    'libtcspc/merge.hpp',
    'libtcspc/multiplex.hpp',
    'libtcspc/npint.hpp',
    'libtcspc/pair.hpp',
    'libtcspc/picoquant_t2.hpp',
    'libtcspc/picoquant_t3.hpp',
    'libtcspc/processor_context.hpp',
    'libtcspc/processor_traits.hpp',
    'libtcspc/read_binary_stream.hpp',
    'libtcspc/read_bytes.hpp',
    'libtcspc/recover_order.hpp',
    'libtcspc/regulate_time_reached.hpp',
    'libtcspc/route.hpp',
    'libtcspc/select.hpp',
    'libtcspc/span.hpp',
    'libtcspc/stop.hpp',
    'libtcspc/swabian_tag.hpp',
    'libtcspc/tcspc.hpp',
    'libtcspc/test_utils.hpp',
    'libtcspc/time_correlate.hpp',
    'libtcspc/time_tagged_events.hpp',
    'libtcspc/timing_misc.hpp',
    'libtcspc/type_erased_processor.hpp',
    'libtcspc/type_list.hpp',
    'libtcspc/move_only_any.hpp',
    'libtcspc/variant_event.hpp',
    'libtcspc/vector_queue.hpp',
    'libtcspc/view_as_bytes.hpp',
    'libtcspc/write_binary_stream.hpp',
    'tcb/span.hpp',
)

install_headers(public_cpp_headers, preserve_path: true)
