# This file is part of libtcspc
# Copyright 2019-2024 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

public_cpp_headers = files(
    'libtcspc/acquire.hpp',
    'libtcspc/arg_wrappers.hpp',
    'libtcspc/batch_unbatch.hpp',
    'libtcspc/batch_unbatch_bin_increment_clusters.hpp',
    'libtcspc/batch_unbatch_from_bytes.hpp',
    'libtcspc/bh_spc.hpp',
    'libtcspc/bin_increment_cluster_encoding.hpp',
    'libtcspc/binning.hpp',
    'libtcspc/bucket.hpp',
    'libtcspc/buffer.hpp',
    'libtcspc/check.hpp',
    'libtcspc/common.hpp',
    'libtcspc/context.hpp',
    'libtcspc/copy_to_buckets.hpp',
    'libtcspc/core.hpp',
    'libtcspc/count.hpp',
    'libtcspc/data_types.hpp',
    'libtcspc/delay.hpp',
    'libtcspc/dither.hpp',
    'libtcspc/errors.hpp',
    'libtcspc/fit_sequence.hpp',
    'libtcspc/gate.hpp',
    'libtcspc/generate.hpp',
    'libtcspc/histogram.hpp',
    'libtcspc/histogram_events.hpp',
    'libtcspc/histogram_impl.hpp',
    'libtcspc/histogram_policy.hpp',
    'libtcspc/histogram_scans.hpp',
    'libtcspc/int_arith.hpp',
    'libtcspc/int_types.hpp',
    'libtcspc/introspect.hpp',
    'libtcspc/match.hpp',
    'libtcspc/merge.hpp',
    'libtcspc/move_only_any.hpp',
    'libtcspc/multiplex.hpp',
    'libtcspc/npint.hpp',
    'libtcspc/npint_ops.hpp',
    'libtcspc/pair.hpp',
    'libtcspc/picoquant_t2.hpp',
    'libtcspc/picoquant_t3.hpp',
    'libtcspc/prepend_append.hpp',
    'libtcspc/processor_traits.hpp',
    'libtcspc/read_binary_stream.hpp',
    'libtcspc/read_integers.hpp',
    'libtcspc/recover_order.hpp',
    'libtcspc/regulate_time_reached.hpp',
    'libtcspc/route.hpp',
    'libtcspc/select.hpp',
    'libtcspc/span.hpp',
    'libtcspc/stop.hpp',
    'libtcspc/swabian_tag.hpp',
    'libtcspc/tcspc.hpp',
    'libtcspc/test_utils.hpp',
    'libtcspc/time_correlate.hpp',
    'libtcspc/time_tagged_events.hpp',
    'libtcspc/timing_misc.hpp',
    'libtcspc/type_erased_processor.hpp',
    'libtcspc/type_list.hpp',
    'libtcspc/variant_event.hpp',
    'libtcspc/vector_queue.hpp',
    'libtcspc/view_as_bytes.hpp',
    'libtcspc/write_binary_stream.hpp',
    'tcb/span.hpp',
)

install_headers(public_cpp_headers, preserve_path: true)
