# This file is part of libtcspc
# Copyright 2019-2024 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

test_libtcspc_srcs = [
    'acquire.cpp',
    'arg_wrappers.cpp',
    'batch_unbatch.cpp',
    'batch_unbatch_bin_increment_clusters.cpp',
    'batch_unbatch_from_bytes.cpp',
    'bh_spc.cpp',
    'bin_increment_cluster_encoding.cpp',
    'binning.cpp',
    'bucket.cpp',
    'buffer.cpp',
    'check.cpp',
    'common.cpp',
    'context.cpp',
    'copy_to_buckets.cpp',
    'core.cpp',
    'count.cpp',
    'data_types.cpp',
    'delay.cpp',
    'dither.cpp',
    'errors.cpp',
    'fit_sequence.cpp',
    'gate.cpp',
    'generate.cpp',
    'histogram.cpp',
    'histogram_events.cpp',
    'histogram_policy.cpp',
    'histogram_scans.cpp',
    'histogram_impl.cpp',
    'int_arith.cpp',
    'int_types.cpp',
    'introspect.cpp',
    'match.cpp',
    'merge.cpp',
    'move_only_any.cpp',
    'multiplex.cpp',
    'npint.cpp',
    'npint_ops.cpp',
    'pair.cpp',
    'picoquant_t2.cpp',
    'picoquant_t3.cpp',
    'prepend_append.cpp',
    'processor_traits.cpp',
    'read_binary_stream.cpp',
    'read_integers.cpp',
    'recover_order.cpp',
    'regulate_time_reached.cpp',
    'route.cpp',
    'select.cpp',
    'stop.cpp',
    'swabian_tag.cpp',
    'test_utils.cpp',
    'time_correlate.cpp',
    'time_tagged_events.cpp',
    'timing_misc.cpp',
    'type_erased_processor.cpp',
    'type_list.cpp',
    'variant_event.cpp',
    'vector_queue.cpp',
    'view_as_bytes.cpp',
    'write_binary_stream.cpp',
]

test_libtcspc_exe = executable(
    'test_libtcspc',
    test_libtcspc_srcs,
    dependencies: [
        catch2_with_main_dep,
        libtcspc_dep,
        trompeloeil_dep,
    ],
)

test('libtcspc tests', test_libtcspc_exe)
