public_cpp_headers = files(
    'ApplyClassTemplateToTupleElements.hpp',
    'BHDeviceEvents.hpp',
    'Broadcast.hpp',
    'Common.hpp',
    'DelayHastenProcessor.hpp',
    'Discard.hpp',
    'DynamicPolymorphism.hpp',
    'EventBuffer.hpp',
    'EventSet.hpp',
    'FLIMEvents.hpp',
    'Gate.hpp',
    'Histogram.hpp',
    'LineClockPixellator.hpp',
    'Merge.hpp',
    'PQT3DeviceEvents.hpp',
    'PixelPhotonEvents.hpp',
    'RoutePhotons.hpp',
    'SplitEvents.hpp',
    'TCSPCEvents.hpp',
    'TimeDelay.hpp',
    'TranslateMarker.hpp',
)

install_headers(public_cpp_headers, subdir: 'FLIMEvents')
