# This file is part of FLIMEvents
# Copyright 2019-2022 Board of Regents of the University of Wisconsin System
# SPDX-License-Identifier: MIT

public_cpp_headers = files(
    'ApplyClassTemplateToTupleElements.hpp',
    'BHDeviceEvents.hpp',
    'Broadcast.hpp',
    'Common.hpp',
    'Count.hpp',
    'DelayHastenProcessor.hpp',
    'Discard.hpp',
    'DynamicPolymorphism.hpp',
    'EventBuffer.hpp',
    'EventSet.hpp',
    'FLIMEvents.hpp',
    'Gate.hpp',
    'GenerateTimings.hpp',
    'Histogram.hpp',
    'LineClockPixellator.hpp',
    'Merge.hpp',
    'PQT3DeviceEvents.hpp',
    'PixelPhotonEvents.hpp',
    'ReadBytes.hpp',
    'RouteByChannel.hpp',
    'SplitEvents.hpp',
    'SwabianTagEvent.hpp',
    'TimeDelay.hpp',
    'TimeTaggedEvents.hpp',
    'TranslateMarker.hpp',
)

install_headers(public_cpp_headers, subdir: 'FLIMEvents')
